# ocr_bank_statements

./: .gitignore  README.md  migrate.sql  pyproject.toml  requirements.txt  setup.sh
app/: .main.py.swp  main.py  normalize_to_duckdb.py  ocr_extract.py  ocr_to_csv.py
app/modules/: .normalize_to_duckdb.py.swp  .pipeline.py.swp  corte_extractor.py  normalize_to_duckdb.py  ocr_to_csv.py  pipeline.py
config/: bbva_mobile.yaml  mercadopago_mobile.yaml  openbank_mobile.yaml  plata_mobile.yaml  santander_mobile.yaml
scripts/: seed_test_data.py
